weekly button links to addingFoodPage now back button also working

--- a/app/src/main/res/layout/activity_adding_food_page.xml
+++ b/app/src/main/res/layout/activity_adding_food_page.xml
@@ -27,6 +27,7 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY"
+                android:onClick="back"
                 android:src="@drawable/back" />
 
             <TextView
