--- a/app/src/main/res/layout/activity_adding_food_page.xml
+++ b/app/src/main/res/layout/activity_adding_food_page.xml
@@ -114,7 +114,37 @@
                         android:background="@drawable/chicken" />
 
                     <Button
-                        android:id="@+id/fishImage"
+                        android:id="@+id/porkImg"
+                        android:layout_width="350dp"
+                        android:layout_height="180dp"
+                        android:layout_margin="5dp"
+                        android:layout_weight="0.5"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitXY"
+                        android:background="@drawable/pork" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp">
+
+                    <Button
+                        android:id="@+id/vegImg"
+                        android:layout_width="350dp"
+                        android:layout_height="180dp"
+                        android:layout_margin="5dp"
+                        android:layout_weight="0.5"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitXY"
+                        android:background="@drawable/bok" />
+
+                    <Button
+                        android:id="@+id/fishImg"
                         android:layout_width="350dp"
                         android:layout_height="180dp"
                         android:layout_margin="5dp"
@@ -129,55 +159,29 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp">
 
                     <Button
-                        android:id="@+id/vegImg"
-                        android:layout_width="350dp"
-                        android:layout_height="200dp"
-                        android:layout_margin="5dp"
-                        android:layout_weight="0.5"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitXY"
-                        android:background="@drawable/bok" />
-
-                    <ImageButton
-                        android:id="@+id/eggImg"
-                        android:layout_width="350dp"
-                        android:layout_height="200dp"
-                        android:layout_margin="5dp"
-                        android:layout_weight="0.5"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/egg" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageButton
                         android:id="@+id/cheeseImg"
                         android:layout_width="350dp"
-                        android:layout_height="200dp"
+                        android:layout_height="180dp"
                         android:layout_margin="5dp"
                         android:layout_weight="0.5"
                         android:adjustViewBounds="true"
                         android:scaleType="fitXY"
-                        android:src="@drawable/cheese" />
+                        android:background="@drawable/cheese" />
 
-                    <ImageButton
+                    <Button
                         android:id="@+id/potatoImg"
                         android:layout_width="350dp"
-                        android:layout_height="200dp"
+                        android:layout_height="180dp"
                         android:layout_margin="5dp"
                         android:layout_weight="0.5"
                         android:adjustViewBounds="true"
                         android:scaleType="fitXY"
-                        android:src="@drawable/potato" />
+                        android:background="@drawable/potato" />
 
                 </LinearLayout>
 
@@ -185,27 +189,29 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp">
 
-                    <ImageButton
+                    <Button
                         android:id="@+id/tofuImg"
                         android:layout_width="350dp"
-                        android:layout_height="200dp"
+                        android:layout_height="180dp"
                         android:layout_margin="5dp"
                         android:layout_weight="0.5"
                         android:adjustViewBounds="true"
                         android:scaleType="fitXY"
-                        android:src="@drawable/tofu" />
+                        android:background="@drawable/tofu" />
 
-                    <ImageButton
+                    <Button
                         android:id="@+id/yogurtImg"
                         android:layout_width="350dp"
-                        android:layout_height="200dp"
+                        android:layout_height="180dp"
                         android:layout_margin="5dp"
                         android:layout_weight="0.5"
                         android:adjustViewBounds="true"
                         android:scaleType="fitXY"
-                        android:src="@drawable/yogurt" />
+                        android:background="@drawable/yogurt" />
 
                 </LinearLayout>
 
@@ -213,27 +219,29 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp">
 
-                    <ImageButton
+                    <Button
                         android:id="@+id/beansImg"
                         android:layout_width="350dp"
-                        android:layout_height="200dp"
+                        android:layout_height="180dp"
                         android:layout_margin="5dp"
                         android:layout_weight="0.5"
                         android:adjustViewBounds="true"
                         android:scaleType="fitXY"
-                        android:src="@drawable/beans" />
+                        android:background="@drawable/beans" />
 
-                    <ImageButton
-                        android:id="@+id/porkImg"
+                    <Button
+                        android:id="@+id/eggImg"
                         android:layout_width="350dp"
-                        android:layout_height="200dp"
+                        android:layout_height="180dp"
                         android:layout_margin="5dp"
                         android:layout_weight="0.5"
                         android:adjustViewBounds="true"
                         android:scaleType="fitXY"
-                        android:src="@drawable/pork" />
+                        android:background="@drawable/egg" />
 
                 </LinearLayout>
 
