updated pictures / changed to EditText instead of ImageButton

--- a/app/src/main/res/layout/activity_adding_food_page.xml
+++ b/app/src/main/res/layout/activity_adding_food_page.xml
@@ -79,6 +79,7 @@
                         android:adjustViewBounds="true"
                         android:scaleType="fitXY"
                         android:inputType="number"
+                        android:maxLength="2"
                         android:hint="0 Servings"
                         android:gravity="bottom"
                         android:paddingBottom="3dp"
