--- a/app/src/main/res/layout/content_adding_food.xml
+++ b/app/src/main/res/layout/content_adding_food.xml
@@ -5,13 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".meal_calc"
-    tools:showIn="@layout/activity_meal_calc">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
-
+    tools:context=".AddingFoodActivity"
+    tools:showIn="@layout/activity_adding_food">
 </android.support.v4.widget.NestedScrollView>
